# tauri-plugin-clipboard

./: .gitignore  .prettierrc  Cargo.toml  LICENSE  Makefile  README.md  build.rs  jsr.json  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  zzz_pnpm-lock.yaml
.changes/: config.json  initial-release.md  more-format.md  readme.md  v0.6.6-large-image-performance.md  v0.6.8-win-html-fix.md
.github/: FUNDING.yml
.github/workflows/: docs.yml  test.yml
dist-js/: api.d.ts  api.d.ts.map  index.cjs  index.d.ts  index.d.ts.map  index.js
docs/: api-examples.md  index.md  installation.md  intro.md  notes.md  package-lock.json  package.json
docs/.vitepress/: config.mts
examples/demo/: package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js
examples/demo/src-tauri/: Cargo.toml  tauri.conf.json
examples/demo/src-tauri/capabilities/: default.json
examples/demo/src-tauri/src/: lib.rs  main.rs
examples/demo/src/routes/: +layout.svelte  +page.svelte
examples/react-demo/: package-lock.json  package.json
examples/react-demo/src/: App.tsx
examples/react-demo/src-tauri/: Cargo.toml  tauri.conf.json
examples/react-demo/src-tauri/src/: main.rs
examples/svelte-app/: package.json
examples/svelte-app/src/: App.svelte
examples/svelte-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/svelte-app/src-tauri/src/: main.rs
examples/svelte-demo/: package.json  vite.config.ts
examples/svelte-demo/src/: App.svelte
examples/svelte-demo/src-tauri/: Cargo.toml  tauri.conf.json
examples/svelte-demo/src-tauri/src/: main.rs
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: api.ts  index.ts
permissions/: monitor-all.toml  read-all.toml  write-all.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: available_types.toml  is_monitor_running.toml  read_files_uris.toml  read_image_base64.toml  read_image_binary.toml  start_monitor.toml  stop_monitor.toml  write_files_uris.toml  write_html_and_text.toml  write_image_base64.toml  write_image_binary.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs  util.rs
webview-dist/: api.d.ts  api.d.ts.map  index.d.ts  index.d.ts.map  index.js
webview-src/: api.ts  index.ts  tsconfig.json
(+3 files in other folders)
