[package]
name = "tauri-plugin-clipboard"
version = "2.0.4"
license = "MIT"
description = "A clipboard plugin for Tauri that supports text, files and image, as well as clipboard update listening."
authors = [ "Huakun" ]
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-clipboard"
repository = "https://github.com/CrossCopy/tauri-plugin-clipboard"

[dependencies]
tauri = { version = "2.0.0-beta.19" }
serde = "1.0"
thiserror = "1.0"
base64 = "0.22.1"
image = "0.25.1"
clipboard-rs = "0.1.7"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.15", features = ["build"] }
